--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,8 @@
-body, html {
-    font-family: 'Source Sans Pro', sans-serif;
-    color: #5E5E5E;
-    min-height: 1000px;
-    background: rgb(255,250,237); /* Old browsers */
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+  color: #5E5E5E;
+  min-height: 1000px;
+  background: rgb(255,250,237); /* Old browsers */
 	background: -moz-radial-gradient(center, ellipse cover,  rgba(255,250,237,1) 0%, rgba(221, 221, 221, 1) 100%); /* FF3.6+ */
 	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,250,237,1)), color-stop(100%,rgba(221, 221, 221, 1))); /* Chrome,Safari4+ */
 	background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,250,237,1) 0%,rgba(221, 221, 221, 1) 100%); /* Chrome10+,Safari5.1+ */
@@ -10,6 +10,25 @@ body, html {
 	background: -ms-radial-gradient(center, ellipse cover,  rgba(255,250,237,1) 0%,rgba(221, 221, 221, 1) 100%); /* IE10+ */
 	background: radial-gradient(ellipse at center,  rgba(255,250,237,1) 0%,rgba(221, 221, 221, 1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fffaed', endColorstr='#fff2c9',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
+.panel {
+	padding: 0px 10px 0px 10px;
+  border-radius: 0px;
+}
+
+h3 {
+  color: whitesmoke;
+  padding: 8px;
+  background-color: rgb(51, 173, 183)
+}
+
+.nav-pills>li>a {
+  border-radius: 0px;
+}
+
+.productImg {
+	margin: 5px 0px 20px 0px;
 }
 
 ul {
