--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,21 +3,30 @@ body {
   color: #5E5E5E;
   min-height: 1000px;
   background: rgb(255,250,237); /* Old browsers */
-	background: -moz-radial-gradient(center, ellipse cover,  rgba(255,250,237,1) 0%, rgba(221, 221, 221, 1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,250,237,1)), color-stop(100%,rgba(221, 221, 221, 1))); /* Chrome,Safari4+ */
-	background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,250,237,1) 0%,rgba(221, 221, 221, 1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-radial-gradient(center, ellipse cover,  rgba(255,250,237,1) 0%,rgba(221, 221, 221, 1) 100%); /* Opera 12+ */
-	background: -ms-radial-gradient(center, ellipse cover,  rgba(255,250,237,1) 0%,rgba(221, 221, 221, 1) 100%); /* IE10+ */
-	background: radial-gradient(ellipse at center,  rgba(255,250,237,1) 0%,rgba(221, 221, 221, 1) 100%); /* W3C */
+	background: -moz-radial-gradient(center, ellipse cover,  rgba(255, 248, 231, 1) 0%, rgba(255, 240, 240, 1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255, 248, 231, 1)), color-stop(100%,rgba(255, 240, 240, 1))); /* Chrome,Safari4+ */
+	background: -webkit-radial-gradient(center, ellipse cover,  rgba(255, 248, 231, 1) 0%,rgba(255, 240, 240, 1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-radial-gradient(center, ellipse cover,  rgba(255, 248, 231, 1) 0%,rgba(255, 240, 240, 1) 100%); /* Opera 12+ */
+	background: -ms-radial-gradient(center, ellipse cover,  rgba(255, 248, 231, 1) 0%,rgba(255, 240, 240, 1) 100%); /* IE10+ */
+	background: radial-gradient(ellipse at center,  rgba(255, 248, 231, 1) 0%,rgba(255, 240, 240, 1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fffaed', endColorstr='#fff2c9',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
+a {
+  color: #626262;
+}
+
+.nav-pills>li.active>a {
+  background-color: #626262;
 }
 
 .navbar {
 	background-color: #FC6B6B;
 	color: white;
+  margin-bottom: 0px;
 }
 
-#cartLink {
+#navLink {
 	cursor: pointer;
 	color: white;
 }
@@ -27,13 +36,22 @@ body {
 	height: 92px;
 }
 
-#cartIcon {
+#navIcon {
 	font-size: 25px;
-	margin: 25px 0px 0px 0px;
+	margin: 30px 0px 0px 0px;
 }
 
-#cartLabel {
+#navLabel {
 	font-size: 30px;
+}
+
+#homeIconDiv{
+	text-align: left;
+	height: 92px;
+}
+
+#mainJumbo {
+  background: rgb(255, 227, 140);
 }
 
 .navTitle{
@@ -42,6 +60,7 @@ body {
 	font-weight: bold;
 	margin-bottom: 25px;
   border: 4px solid white;
+    box-shadow: 0px 0px 18px rgb(255, 227, 140);
 }
 
 .panel {
