--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,7 +42,7 @@ a {
 }
 
 #navLabel {
-	font-size: 30px;
+	font-size: 1.6em;
 }
 
 #homeIconDiv{
@@ -52,6 +52,7 @@ a {
 
 #mainJumbo {
   background: rgb(255, 227, 140);
+    padding: 10px 0px 20px;
 }
 
 .navTitle{
@@ -78,8 +79,52 @@ a {
   border-radius: 0px;
 }
 
+.image-container {
+    position: relative;
+    margin: 5px auto 10px auto;
+    display: block;
+    width: 360px;
+}
+.image-container .after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .6;
+    color: #FFF;
+    display: block;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&amp;0.65+0,0+100;Neutral+Density */
+    background: -moz-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+    background: -webkit-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Opera 12+ */
+    background: -ms-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* IE10+ */
+    background: radial-gradient(ellipse at center,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
+.image-container .after .glyphicon {
+  left: 135px;
+  top: 76px;
+  font-size: 90px;
+}
+
+.image-container .after .addToCartLabel{
+  position: absolute;
+  left: 112px;
+  top: 176px;
+  font-size: 30px;
+}
+
+.image-container:hover .after {
+  opacity: 1;
+}
+
 .productImg {
-	margin: 5px 0px 20px 0px;
+	margin: 5px auto 10px auto;
+  max-width: 100%;
+  display: block;
 }
 
 ul {
